syntax = "proto3";

import "terra/cell.proto";
import "scope/scope.proto";
import "geometry/surface_shape.proto";

package hs.proto.terra;

message Surface {
  repeated Cell cells = 1;

  hs.proto.geometry.SurfaceShape shape = 2;
}

message Plane {
  string id = 1;
  Surface surface = 2;
  // Things like caves, other dimensions and so on
  repeated Cell off_surface = 3;

  int32 external_region_radius = 5;

  hs.proto.scope.Scope scope = 6;

  // world map image. png.
  //bytes world_map_image = 4;
}


