syntax = "proto3";

package hs.proto.types;

message ControlObject {
  int64 next_id = 1;
}

